# Artex

./: .gitignore  CMakeLists.txt  README.md
include/: file_explorer.h  graphics.h
src/: file_explorer.c  graphics.c  main.c
